--- a/Style/screen.css
+++ b/Style/screen.css
@@ -201,6 +201,13 @@ select {
     margin-bottom: var(--global-whitespace-xxl);
 }
 
+.c-done {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    fill: var(--global-button-color);
+}
+
 .c-call {
     font-size: 32px;
     border-radius: var(--global-borderRadius);
